Changed code to get organisation with ucas code

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -14,7 +14,7 @@
                 <a href="@Url.Action("index", "organisations")">Organisations</a>
             </li>
             <li>
-                <a href="@Url.Action("index", "courses", new {organisationId= Model.OrganisationId})">@Model.OrganisationName</a>
+                <a href="@Url.Action("index", "courses", new {ucasCode= Model.Course.UcasCode})">@Model.OrganisationName</a>
             </li>
             <li>
                 @Model.Course.Name
