Add 401 error page back

--- a/src/ui/Views/Error/Forbidden.cshtml
+++ b/src/ui/Views/Error/Forbidden.cshtml
@@ -1,4 +1,4 @@
- @{ ViewBag.Title = "Access denied"; }
+ @{ ViewBag.Title = "Forbidden"; }
 
 <div class="grid-row">
   <div class="column-two-thirds">
