Use ucas code for retrieving organisations

--- a/src/ui/Views/Organisations/Index.cshtml
+++ b/src/ui/Views/Organisations/Index.cshtml
@@ -15,6 +15,9 @@
 @foreach (var organisation in Model.Oganisations)
 {
 <h3 class="heading-medium">
-    <span><a href="@Url.Action("Index", "courses", new { ucasCode = organisation.UcasCode })">@organisation.OrganisationName</a><br/>@organisation.TotalCourses courses</span>
+    <span>
+        <a href="@Url.Action("Index", "courses", new {ucasCode = organisation.UcasCode})">@organisation.OrganisationName</a>
+        @*<br/>@organisation.TotalCourses courses*@
+    </span>
 </h3>
 }
