Fixed course Totals. Changed urls

--- a/src/ui/Views/Organisations/Index.cshtml
+++ b/src/ui/Views/Organisations/Index.cshtml
@@ -17,7 +17,7 @@
 <h3 class="heading-medium">
     <span>
         <a href="@Url.Action("Index", "courses", new {ucasCode = organisation.UcasCode})">@organisation.OrganisationName</a>
-        @*<br/>@organisation.TotalCourses courses*@
+        <br/>@organisation.TotalCourses courses
     </span>
 </h3>
 }
