Fix layout of org list and totals

--- a/src/ui/Views/Organisations/Index.cshtml
+++ b/src/ui/Views/Organisations/Index.cshtml
@@ -14,10 +14,8 @@
 </div>
 @foreach (var organisation in Model.Oganisations)
 {
-<h3 class="heading-medium">
-    <span>
-        <a href="@Url.Action("Index", "courses", new {ucasCode = organisation.UcasCode})">@organisation.OrganisationName</a>
-        <br/>@organisation.TotalCourses courses
-    </span>
+<h3 class="heading-medium remove-bottom-margin">
+    <a href="@Url.Action("Index", "courses", new {ucasCode = organisation.UcasCode})">@organisation.OrganisationName</a>
 </h3>
+<p>@organisation.TotalCourses courses</p>
 }
