Home link should go to root not courses

--- a/src/ui/Views/Shared/_Layout.cshtml
+++ b/src/ui/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
         <div class="content">
             <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
             <nav id="proposition-menu">
-                <a href="/courses" id="proposition-name" role="link">@ViewData["serviceName"]</a>
+                <a href="/" id="proposition-name" role="link">@ViewData["serviceName"]</a>
 
                 <ul id="proposition-links">
                     @if (User.Identity.IsAuthenticated)
