--- a/src/ui/Views/Legal/Privacy.cshtml
+++ b/src/ui/Views/Legal/Privacy.cshtml
@@ -1,6 +1,6 @@
  @{ ViewBag.Title = $"Privacy policy"; }
 
-<div class="govuk-width-container">
+<main role="main" class="govuk-main-wrapper" id="main-content">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-xl">Privacy policy</h1>
@@ -100,4 +100,4 @@
             </p>
         </div>
     </div>
-</div>
+</main>
