--- a/src/ui/Views/Shared/_Layout_base.cshtml
+++ b/src/ui/Views/Shared/_Layout_base.cshtml
@@ -77,8 +77,10 @@
     </header>
 
     @RenderSection("afterHeader", required: false)
-
-    @RenderBody()
+    
+    <div class="govuk-width-container">
+        @RenderBody()
+    </div>
 
     <footer class="govuk-footer" role="contentinfo">
 
