--- a/src/ui/Views/Legal/Cookies.cshtml
+++ b/src/ui/Views/Legal/Cookies.cshtml
@@ -1,6 +1,6 @@
  @{ ViewBag.Title = $"Cookies"; }
 
-<div class="govuk-width-container">
+<main role="main" class="govuk-main-wrapper" id="main-content">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-xl">Cookies</h1>
@@ -117,4 +117,4 @@
                 </div>
         </div>
     </div>
-</div>
+</main>
