--- a/src/ui/Views/Legal/TandC.cshtml
+++ b/src/ui/Views/Legal/TandC.cshtml
@@ -1,6 +1,6 @@
 @{ ViewBag.Title = $"Terms and Conditions"; }
 
-<div class="govuk-width-container">
+<main role="main" class="govuk-main-wrapper" id="main-content">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-xl">Terms and Conditions</h1>
@@ -154,4 +154,4 @@
                 </p>
         </div>
     </div>
-</div>
+</main>
