--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -82,14 +82,14 @@
                         {
                             foreach (var variant in course.Variants)
                             {
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__cell">@course.CourseTitle</td>
-                            <td class="govuk-table__cell">@variant.UcasCode</td>
-                            <td class="govuk-table__cell">@variant.GetCourseVariantType()</td>
-                            <td class="govuk-table__cell ucas-view-link">
-                                <a href="@Url.Action("variants", "course", new { accreditingProviderId = providerCourse.AccreditingProviderId, courseTitle = course.CourseTitle, ucasCode = variant.UcasCode })">View course</a>
-                            </td>
-                        </tr>
+                            <tr class="govuk-table__row">
+                                <td class="govuk-table__cell">@course.CourseTitle</td>
+                                <td class="govuk-table__cell">@variant.UcasCode</td>
+                                <td class="govuk-table__cell">@variant.GetCourseVariantType()</td>
+                                <td class="govuk-table__cell ucas-view-link">
+                                    <a href="@Url.Action("variants", "course", new { instCode = Model.Courses.UcasCode, accreditingProviderId = providerCourse.AccreditingProviderId, ucasCode = variant.UcasCode })" class="govuk-link">View course</a>
+                                </td>
+                            </tr>
                             }
                         }
                     </tbody>
