--- a/src/ui/Views/RequestAccess/index.cshtml
+++ b/src/ui/Views/RequestAccess/index.cshtml
@@ -1,6 +1,11 @@
 @model RequestAccessViewModel
 @{
     Layout = "_Layout";
+    var fnv = ViewData.ModelState["FirstName"] != null && ViewData.ModelState["FirstName"].Errors.Any();
+    var lnv = ViewData.ModelState["LastName"] != null && ViewData.ModelState["LastName"].Errors.Any();
+    var eav = ViewData.ModelState["EmailAddress"] != null && ViewData.ModelState["EmailAddress"].Errors.Any();
+    var ov = ViewData.ModelState["Organisation"] != null && ViewData.ModelState["Organisation"].Errors.Any();
+    var rv = ViewData.ModelState["Reason"] != null && ViewData.ModelState["Reason"].Errors.Any();
 }
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
@@ -12,30 +17,40 @@
             {
 
                 @Html.Partial("ErrorSummary")
-                <div id="FirstName-wrapper" class="govuk-form-group @((ViewData.ModelState["FirstName"] != null && ViewData.ModelState["FirstName"].Errors.Any()) ? "govuk-form-group--error" : "")">
+                <div id="FirstName-wrapper" class="govuk-form-group @(fnv ? "govuk-form-group--error" : "")">
                     @Html.LabelFor(m => m.FirstName, new { @class="govuk-label" })
-                    @Html.ValidationMessageFor(m => m.FirstName, "", new { @class="govuk-error-message" })
+                    @if (fnv) {
+                        @Html.ValidationMessageFor(m => m.FirstName, "", new { @class="govuk-error-message" })
+                    }
                     @Html.TextBoxFor(m => m.FirstName, new { @class= "govuk-input govuk-!-width-one-half" })
                 </div>
 
-                <div id="LastName-wrapper" class="govuk-form-group @((ViewData.ModelState["LastName"] != null && ViewData.ModelState["LastName"].Errors.Any()) ? "govuk-form-group--error" : "")">
+                <div id="LastName-wrapper" class="govuk-form-group @(lnv ? "govuk-form-group--error" : "")">
                     @Html.LabelFor(m => m.LastName, new { @class="govuk-label" })
-                    @Html.ValidationMessageFor(m => m.LastName, "", new { @class="govuk-error-message" })
+                    @if (lnv) {
+                        @Html.ValidationMessageFor(m => m.LastName, "", new { @class="govuk-error-message" })
+                    }
                     @Html.TextBoxFor(m => m.LastName, new { @class="govuk-input govuk-!-width-one-half" })
                 </div>
-                <div id="EmailAddress-wrapper" class="govuk-form-group @((ViewData.ModelState["EmailAddress"] != null && ViewData.ModelState["EmailAddress"].Errors.Any()) ? "govuk-form-group--error" : "")">
+                <div id="EmailAddress-wrapper" class="govuk-form-group @(eav ? " govuk-form-group--error " : " ")">
                     @Html.LabelFor(m => m.EmailAddress, new { @class="govuk-label" })
-                    @Html.ValidationMessageFor(m => m.EmailAddress, "", new { @class="govuk-error-message" })
+                    @if (eav) {
+                        @Html.ValidationMessageFor(m => m.EmailAddress, "", new { @class="govuk-error-message" })
+                    }
                     @Html.TextBoxFor(m => m.EmailAddress, new { @class="govuk-input govuk-!-width-one-half" })
                 </div>
-                <div id="Organisation-wrapper" class="govuk-form-group @((ViewData.ModelState["Organisation"] != null && ViewData.ModelState["Organisation"].Errors.Any()) ? "govuk-form-group--error" : "")">
+                <div id="Organisation-wrapper" class="govuk-form-group @(ov ? "govuk-form-group--error" : "")">
                     @Html.LabelFor(m => m.Organisation, new { @class="govuk-label" })
-                    @Html.ValidationMessageFor(m => m.Organisation, "", new { @class="govuk-error-message" })
+                    @if (ov) {
+                        @Html.ValidationMessageFor(m => m.Organisation, "", new { @class="govuk-error-message" })
+                    }
                     @Html.TextBoxFor(m => m.Organisation, new { @class="govuk-input govuk-!-width-one-half" })
                 </div>
-                <div id="Reason-wrapper" class="govuk-form-group @((ViewData.ModelState["Reason"] != null && ViewData.ModelState["Reason"].Errors.Any()) ? "govuk-form-group--error" : "")">
+                <div id="Reason-wrapper" class="govuk-form-group @(rv ? "govuk-form-group--error" : "")">
                     @Html.LabelFor(m => m.Reason, new { @class="govuk-label" })
-                    @Html.ValidationMessageFor(m => m.Reason, "", new { @class="govuk-error-message" })
+                    @if (rv) {
+                        @Html.ValidationMessageFor(m => m.Reason, "", new { @class="govuk-error-message" })
+                    }
                     @Html.TextAreaFor(m => m.Reason, new { @class="govuk-textarea govuk-!-width-two-thirds" })
                 </div>
                 <div class="form-group">
