Fix footer links styling

--- a/src/ui/Views/Shared/_Layout.cshtml
+++ b/src/ui/Views/Shared/_Layout.cshtml
@@ -59,10 +59,18 @@
 @section footerSupportLinks {
     <h2 class="govuk-visually-hidden">Support links</h2>
     <ul class="govuk-footer__inline-list">
-        <li class="govuk-footer__inline-list-item"><a href="mailto:becomingateacher@digital.education.gov.uk?subject=Publish%20teacher%20training%20courses%20feedback">Give feedback</a></li>
-        <li class="govuk-footer__inline-list-item"><a href="/cookies">Cookies</a></li>
-        <li class="govuk-footer__inline-list-item"><a href="/privacy-policy">Privacy Policy</a></li>
-        <li class="govuk-footer__inline-list-item"><a href="/terms-conditions">Terms and conditions</a></li>
+        <li class="govuk-footer__inline-list-item">
+            <a href="mailto:becomingateacher@digital.education.gov.uk?subject=Publish%20teacher%20training%20courses%20feedback" class="govuk-footer__link">Give feedback</a>
+        </li>
+        <li class="govuk-footer__inline-list-item">
+            <a href="/cookies" class="govuk-footer__link">Cookies</a>
+        </li>
+        <li class="govuk-footer__inline-list-item">
+            <a href="/privacy-policy" class="govuk-footer__link">Privacy Policy</a>
+        </li>
+        <li class="govuk-footer__inline-list-item">
+            <a href="/terms-conditions" class="govuk-footer__link">Terms and conditions</a>
+        </li>
     </ul>
 }
 
