Update styling for coruse details definition list

--- a/src/ui/Assets/Styles/patterns/_definition-list.scss
+++ b/src/ui/Assets/Styles/patterns/_definition-list.scss
@@ -1,26 +1,26 @@
 %govuk-list--description {
-    @include govuk-grid-row;
+    @include govuk-clearfix;
 }
 
 %govuk-list--description > dt {
-    @include govuk-font($size: 19, $weight: bold);
-}
-
-%govuk-list--description > dt {
-    // margin-top is applied to the dt as the last dd in each dt cannot be targeted.
+    @include govuk-font($size: 19, $weight: normal);
     @include govuk-responsive-margin(4, "top");
+    vertical-align: top;
 
-     @include govuk-media-query($from: tablet) {
-         @include govuk-grid-column(one-third);
-     }
-}
-
-%govuk-list--description > dt:first-child {
-    margin-top: 0;
+    @include mq ($from: desktop) {
+        float: left;
+        width: 33.33%;
+    }
 }
 
 %govuk-list--description > dd {
     margin-left: 0;
+   
+    @include mq ($from: desktop) {
+        float: left;
+        @include govuk-responsive-margin(4, "top");
+        width: 66.66%;
+    }
 }
 
 .govuk-list--description {
