--- a/src/ui/Views/Organisations/Index.cshtml
+++ b/src/ui/Views/Organisations/Index.cshtml
@@ -12,13 +12,17 @@
             <h1 class="govuk-heading-xl">
                 Organisations
             </h1>
-            @foreach (var organisation in Model.Oganisations)
-            {
-            <h3 class="govuk-heading-m">
-                <a href="@Url.Action("Index", "courses", new {ucasCode = organisation.UcasCode})" class="govuk-link">@organisation.OrganisationName</a>
-                <span class="govuk-body govuk-!-font-weight-regular govuk-!-display-block">@organisation.TotalCourses courses</span>
-            </h3>     
-            }
+            <ul class="govuk-list">
+                @foreach (var organisation in Model.Oganisations)
+                {
+                <li>
+                    <h3 class="govuk-heading-m">
+                        <a href="@Url.Action("Index", "courses", new {ucasCode = organisation.UcasCode})" class="govuk-link">@organisation.OrganisationName</a>
+                        <span class="govuk-body govuk-!-font-weight-regular govuk-!-display-block">@organisation.TotalCourses courses</span>
+                    </h3>    
+                </li>
+                }
+            </ul>
         </div>
     </div>
 </main>
