Add template class to html element

--- a/src/ui/Views/Shared/_Layout_base.cshtml
+++ b/src/ui/Views/Shared/_Layout_base.cshtml
@@ -2,7 +2,7 @@
 @RenderSection("topOfPage", required: false)
 <!--[if lt IE 9]><html class="lte-ie8" lang="@(ViewData["htmlLang"] ?? "en")"><![endif]-->
 <!--[if gt IE 8]><!-->
-<html lang="@(ViewData["htmlLang"] ?? "en")">
+<html lang="@(ViewData["htmlLang"] ?? "en")" class="govuk-template">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8" />
