--- a/src/ui/Views/Shared/_Layout_base.cshtml
+++ b/src/ui/Views/Shared/_Layout_base.cshtml
@@ -112,6 +112,7 @@
     <div id="global-app-error" class="app-error hidden"></div>
 
     <script src="~/scripts/all.js"></script>
+    <script src="~/scripts/cookie-bar.js"></script>
     <script>window.GOVUKFrontend.initAll()</script>
 
     @RenderSection("bodyEnd", required: false)
