--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -13,206 +13,56 @@ $govuk-global-styles: true;
 
 @import "patterns/definition-list";
 
+// GOVU.UK Tabs without border around entire component
+.govuk-tabs__panel--without-border {
+  @include govuk-responsive-margin(8, "bottom");
+  padding-top: govuk-spacing(6);
+  padding-bottom: govuk-spacing(6);
+
+  &--hidden {
+    display: none;
+  }
+
+  & > :last-child {
+    margin-bottom: 0;
+  }
+}
+
+// Add brackets around user name in header
 .govuk-header__link--profile {
-    @extend .govuk-header__link;
+  @extend .govuk-header__link;
 
-    &:after {
-        content: ")";
-    }
+  &:after {
+    content: ")";
+  }
 
-    &:before {
-        content: "(";
-        margin-left: govuk-spacing(1);
-    }
+  &:before {
+    content: "(";
+    margin-left: govuk-spacing(1);
+  }
 }
 
 // Add a red border to .form-control-group if validation fails
 .input-validation-error {
-    border: 4px solid govuk-color("red");
+  border: 4px solid govuk-color("red");
 }
 
-.phase-banner-wrapper {
-    max-width: 960px;
-    margin: 0 15px;
-    margin: 0 30px;
-    margin: 0 auto;
-    padding: 0 15px 10px;
-    outline: none;
+// Custom styles for courses data table
+.ucas-info-table {
+  .govuk-table__header {
+    border-color: govuk-colour("black");
+    border-width: 2px;
+  }
 
-    @include govuk-media-query($from: tablet) {
-        margin: 0 30px;
-        padding: 0 10px;
-    }
-
-    @include govuk-media-query($from: desktop) {
-        margin: 0 auto;
-        width: 960px;
-    }
-}
-
-// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
-
-.add-double-bottom-margin {
-    margin-bottom:  govuk-spacing(2);
-}
-
-.form-control-full {
-    width: 100%;
-}
-
-.results-item {
-    margin-bottom:  govuk-spacing(2);
-}
-
-.metadata dt,
-.metadata dd {
-    display: inline-block;
-}
-
-.metadata dt {
-    width: 20%;
-}
-
-.metadata dd {
-    width: 79%;
-    margin-left: 0;
-}
-
-.filter-category {
-    background-color: govuk-color("grey-3");
-    padding: 12px;
-    margin-bottom: 10px;
-}
-
-.filters {
-    background-color: govuk-colour("white");
-    padding: 10px;
-}
-
-.filter-heading {
-    margin-top: 3px;
-}
-
-.filter-link {
-    padding-top: 10px;
-}
-
-.tabs {
-    padding-left: 0;
-    border-bottom: 1px solid $govuk-input-border-colour;
-    font-size: 19px;
-    margin-bottom:  govuk-spacing(2);
-
-    li {
-        margin-bottom: -1px;
-        display: inline-block;
-    }
-
-    a {
-        display: block;
-        padding: 15px 20px;
-    }
-
-    .active a {
-        border: 1px solid $govuk-input-border-colour;
-        border-bottom-color: govuk-colour("white");
-        text-decoration: none;
-
-        &:link,
-        &:visited {
-            color: govuk-color("black");
-        }
-    }
-}
-
-.form-control-xsmall {
-    width: 120px;
-}
-
-.form-control-small {
-    width: 200px;
-}
-
-.tabs {
-    padding-left: 0;
-    border-bottom: 1px solid $govuk-input-border-colour;
-    font-size: 19px;
-
-    li {
-        margin-bottom: -1px;
-        display: inline-block;
-    }
-
-    a {
-        display: block;
-        padding: 15px 20px;
-    }
-
-    .active a {
-        border: 1px solid $govuk-input-border-colour;
-        border-bottom-color: govuk-colour("white");
-        text-decoration: none;
-
-        &:link,
-        &:visited {
-            color: govuk-color("black");
-        }
-    }
-}
-
-.study-options-table-code {
-    width: 120px;
-}
-
-.study-options-table-vacancies {
-    width: 120px;
-}
-
-.multiple-options li {
-    margin-bottom: 5px;
-    border-bottom: 1px solid #ccc;
-}
-
-.fake-email {
-    margin-left: 15px;
-    margin-top: 20px;
-    border: 5px solid $govuk-input-border-colour;
-    padding: 60px;
-}
-
-.ucas-info-table tr:last-child td {
-    border-bottom: 0;
-}
-
-.ucas-info-table .ucas-view-link {
+  &__link {
     text-align: right;
-}
+  }
 
-.missing-section {
-    border: 5px solid $govuk-input-border-colour;
-    padding: govuk-spacing(2);
-}
+  &__subject-col {
+    width: 30%;
+  }
 
-.preview-pre {
-    white-space: pre-wrap;
-}
-
-.heading-medium .heading-secondary {
-    color: govuk-colour("grey-1");
-    font-weight: normal;
-    display: block;
-}
-
-.ucas-info-table  {
-    .subject-col {
-        width: 30%;
-    }
-
-    .code-col {
-        width: 20%;
-    }
-
-    .ucas-view-link {
-        text-align: right;
-    }
+  &__code-col {
+    width: 20%;
+  }
 }
