--- a/src/ui/Views/Organisation/Courses.cshtml
+++ b/src/ui/Views/Organisation/Courses.cshtml
@@ -1,50 +1,9 @@
 ﻿@model CourseListViewModel
 
 @{
-  Layout = "_Layout";
+  Layout = "Shared/_TabViewLayout";
   ViewBag.Title = Model.Courses.OrganisationName;
 }
-
-@if (Model.MultipleOrganisations)
-{
-  <nav class="govuk-breadcrumbs">
-    <ol class="govuk-breadcrumbs__list">
-      <li class="govuk-breadcrumbs__list-item">
-        <a href="@Url.Action("index", "Organisations")" class="govuk-breadcrumbs__link">Organisations</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="page">
-        @Model.Courses.OrganisationName
-      </li>
-    </ol>
-  </nav>
-}
-
-<main role="main" class="govuk-main-wrapper" id="main-content">
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
-        @Model.Courses.OrganisationName
-      </h1>
-    </div>
-  </div>
-
-  <div class="govuk-tabs">
-    <h2 class="govuk-tabs__title">
-      Contents
-    </h2>
-
-    <ul class="govuk-tabs__list">
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#" aria-selected="true">
-          Courses
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="@Url.Action("index", "RequestAccess")">
-          Request access for someone else
-        </a>
-      </li>
-    </ul>
 
     <section class="govuk-tabs__panel--without-border">
       <h2 class="govuk-heading-l">Courses</h2>
@@ -87,5 +46,3 @@
         </table>
       }
     </section>
-  </div>
-</main>
