--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -6,7 +6,7 @@
     var link = "mailto:becomingateacher@digital.education.gov.uk?subject=Problem%20with%20course%20" + Model.Course.ProgrammeCode;
 }
 
-<a href="@Url.Action("index", "courses", new {ucasCode = Model.Course.UcasCode})" class="govuk-back-link">Back</a>  
+<a href="@Url.Action("Courses", "Organisation", new {ucasCode = Model.Course.UcasCode})" class="govuk-back-link">Back</a>  
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
     <h1 class="govuk-heading-xl">
