--- a/src/ui/Views/Organisation/Shared/RequestAccessSuccess.cshtml
+++ b/src/ui/Views/Organisation/Shared/RequestAccessSuccess.cshtml
@@ -7,7 +7,7 @@
         <h3 class="govuk-heading-m govuk-success-summary__title">DfE has received your request to give access to @name.</h3>
         <div class="govuk-success-summary__body">
             <p class="govuk-body">They will receive sign-up instructions if their account is approved.</p>
-            <p class="govuk-body">@Html.ActionLink("Request access for someone else", "Index", "RequestAccess")</p>
+            <p class="govuk-body">@Html.ActionLink("Request access for someone else", "RequestAccess", "Organisation")</p>
         </div>
     </div>
 }
