Clean up ui and fix indentation

--- a/src/ui/Views/Organisation/Shared/_OrganisationDetailsLayout.cshtml
+++ b/src/ui/Views/Organisation/Shared/_OrganisationDetailsLayout.cshtml
@@ -4,21 +4,12 @@
 
 @await RenderSectionAsync("breadcrumbs", required: true)
 
-@Html.Partial("~/Views/Organisation/Shared/RequestAccessSuccess.cshtml")
-
 <main role="main" class="govuk-main-wrapper" id="main-content">
-
-    @await RenderSectionAsync("organisationName", required: true)
-
-
-    <div class="govuk-tabs">
-        <h2 class="govuk-tabs__title">
-            Contents
-        </h2>
-
-        @await RenderSectionAsync("tabs", required: true)
-
-        @RenderBody()
-    </div>
+  @await RenderSectionAsync("organisationName", required: true)
+  @Html.Partial("~/Views/Organisation/Shared/RequestAccessSuccess.cshtml")
+  <div class="govuk-tabs">
+    <h2 class="govuk-tabs__title">Contents</h2>
+    @await RenderSectionAsync("tabs", required: true)
+    @RenderBody()
+  </div>
 </main>
-
