--- a/src/ui/Views/Organisation/RequestAccess.cshtml
+++ b/src/ui/Views/Organisation/RequestAccess.cshtml
@@ -8,55 +8,56 @@
   var rv = ViewData.ModelState["Reason"] != null && ViewData.ModelState["Reason"].Errors.Any();
 }
 
-
-        <section class="govuk-tabs__panel--without-border">
-            <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
-                    <h1 class="govuk-heading-l">Request access for someone</h1>
-                    <p class="govuk-body">You can request a DfE Sign-in account for others who manage your courses.</p>
-                    @using (Html.BeginForm("RequestAccess", "Organisation", FormMethod.Post))
-          {
-                    @Html.Partial("ErrorSummary")
-                    <div id="FirstName-wrapper" class="govuk-form-group @(fnv ? "govuk-form-group--error" : "")">
-                        @Html.LabelFor(m => m.FirstName, new { @class="govuk-label" })
-                        @if (fnv) {
-                        @Html.ValidationMessageFor(m => m.FirstName, "", new { @class="govuk-error-message" })
-                }
-                        @Html.TextBoxFor(m => m.FirstName, new { @class= "govuk-input govuk-!-width-one-half" })
-                    </div>
-
-                    <div id="LastName-wrapper" class="govuk-form-group @(lnv ? "govuk-form-group--error" : "")">
-                        @Html.LabelFor(m => m.LastName, new { @class="govuk-label" })
-                        @if (lnv) {
-                        @Html.ValidationMessageFor(m => m.LastName, "", new { @class="govuk-error-message" })
-                }
-                        @Html.TextBoxFor(m => m.LastName, new { @class="govuk-input govuk-!-width-one-half" })
-                    </div>
-                    <div id="EmailAddress-wrapper" class="govuk-form-group @(eav ? " govuk-form-group--error " : " ")">
-                        @Html.LabelFor(m => m.EmailAddress, new { @class="govuk-label" })
-                        @if (eav) {
-                        @Html.ValidationMessageFor(m => m.EmailAddress, "", new { @class="govuk-error-message" })
-                }
-                        @Html.TextBoxFor(m => m.EmailAddress, new { @class="govuk-input govuk-!-width-one-half" })
-                    </div>
-                    <div id="Organisation-wrapper" class="govuk-form-group @(ov ? "govuk-form-group--error" : "")">
-                        @Html.LabelFor(m => m.Organisation, new { @class="govuk-label" })
-                        @if (ov) {
-                        @Html.ValidationMessageFor(m => m.Organisation, "", new { @class="govuk-error-message" })
-                }
-                        @Html.TextBoxFor(m => m.Organisation, new { @class="govuk-input govuk-!-width-one-half" })
-                    </div>
-                    <div id="Reason-wrapper" class="govuk-form-group @(rv ? "govuk-form-group--error" : "")">
-                        @Html.LabelFor(m => m.Reason, new { @class="govuk-label" })
-                        @if (rv) {
-                        @Html.ValidationMessageFor(m => m.Reason, "", new { @class="govuk-error-message" })
-                }
-                        @Html.TextAreaFor(m => m.Reason, new { @class="govuk-textarea govuk-!-width-two-thirds" })
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" class="govuk-button" value="Request access" />
-                    </div>
-            }
-                </div>
-            </div>
-        </section>
+<section class="govuk-tabs__panel--without-border">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <div class="course-basicinfo govuk-!-margin-bottom-9">
+        <h1 class="govuk-heading-l">Request access for someone else</h1>
+        <p class="govuk-body">You can request a DfE Sign-in account for others who manage your courses.</p>
+      </div>
+      <h2 class="govuk-heading-m">Request an account for:</h2>
+      @using (Html.BeginForm("RequestAccess", "Organisation", FormMethod.Post))
+      {
+        @Html.Partial("ErrorSummary")
+        <div id="FirstName-wrapper" class="govuk-form-group @(fnv ? "govuk-form-group--error" : "")">
+          @Html.LabelFor(m => m.FirstName, new { @class="govuk-label" })
+          @if (fnv) {
+            @Html.ValidationMessageFor(m => m.FirstName, "", new { @class="govuk-error-message" })
+          }
+          @Html.TextBoxFor(m => m.FirstName, new { @class= "govuk-input govuk-!-width-one-half" })
+        </div>
+        <div id="LastName-wrapper" class="govuk-form-group @(lnv ? "govuk-form-group--error" : "")">
+          @Html.LabelFor(m => m.LastName, new { @class="govuk-label" })
+          @if (lnv) {
+            @Html.ValidationMessageFor(m => m.LastName, "", new { @class="govuk-error-message" })
+          }
+          @Html.TextBoxFor(m => m.LastName, new { @class="govuk-input govuk-!-width-one-half" })
+        </div>
+        <div id="EmailAddress-wrapper" class="govuk-form-group @(eav ? " govuk-form-group--error " : " ")">
+          @Html.LabelFor(m => m.EmailAddress, new { @class="govuk-label" })
+          @if (eav) {
+            @Html.ValidationMessageFor(m => m.EmailAddress, "", new { @class="govuk-error-message" })
+          }
+          @Html.TextBoxFor(m => m.EmailAddress, new { @class="govuk-input govuk-!-width-one-half" })
+        </div>
+        <div id="Organisation-wrapper" class="govuk-form-group @(ov ? "govuk-form-group--error" : "")">
+          @Html.LabelFor(m => m.Organisation, new { @class="govuk-label" })
+          @if (ov) {
+            @Html.ValidationMessageFor(m => m.Organisation, "", new { @class="govuk-error-message" })
+          }
+          @Html.TextBoxFor(m => m.Organisation, new { @class="govuk-input govuk-!-width-one-half" })
+        </div>
+        <div id="Reason-wrapper" class="govuk-form-group @(rv ? "govuk-form-group--error" : "")">
+          @Html.LabelFor(m => m.Reason, new { @class="govuk-label" })
+          @if (rv) {
+            @Html.ValidationMessageFor(m => m.Reason, "", new { @class="govuk-error-message" })
+          }
+          @Html.TextAreaFor(m => m.Reason, new { @class="govuk-textarea govuk-!-width-two-thirds" })
+        </div>
+        <div class="form-group">
+          <input type="submit" class="govuk-button" value="Request access" />
+        </div>
+      }
+    </div>
+  </div>
+</section>
