--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -6,12 +6,10 @@ $govuk-global-styles: true;
 @import "node_modules/govuk-frontend/all";
 
 @import "components/cookie-banner";
-
-@import "patterns/course-parts";
-
-@import "patterns/success-summary";
-
-@import "patterns/definition-list";
+@import "components/course-parts";
+@import "components/success-summary";
+@import "components/definition-list";
+@import "components/currency-input";
 
 // GOVU.UK Tabs without border around entire component
 .govuk-tabs__panel--without-border {
