Add fingerprint to application.js

--- a/src/ui/Views/Shared/_Layout_base.cshtml
+++ b/src/ui/Views/Shared/_Layout_base.cshtml
@@ -111,7 +111,7 @@
 
     <div id="global-app-error" class="app-error hidden"></div>
 
-    <script src="~/scripts/application.js"></script>
+    <script src="~/scripts/application.js" asp-append-version="true"></script>
     <script>window.GOVUKFrontend.initAll()</script>
 
     @RenderSection("bodyEnd", required: false)
