--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -6,12 +6,12 @@
     var link = "mailto:becomingateacher@digital.education.gov.uk?subject=Problem%20with%20course%20" + Model.Course.ProgrammeCode;
 }
 
-<a href="@Url.Action("Courses", "Organisation", new {ucasCode = Model.Course.UcasCode})" class="govuk-back-link">Back</a>  
+<a href="@Url.Action("Courses", "Organisation", new {ucasCode = Model.Course.UcasCode})" class="govuk-back-link">Back</a>
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
     <h1 class="govuk-heading-xl">
-        <span class="govuk-caption-xl">@Model.Course.Name</span>
-        @Model.Course.Type (@Model.Course.ProgrammeCode)
+        <span class="govuk-caption-xl">@Model.Course.Type</span>
+        @Model.Course.Name (@Model.Course.ProgrammeCode)
     </h1>
 
     <div class="govuk-grid-row">
