Add publish org action into UI

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -4,13 +4,10 @@ $govuk-fonts-path: "/fonts/";
 $govuk-global-styles: true;
 
 @import "node_modules/govuk-frontend/all";
-
 @import "components/cookie-banner";
-
+@import "components/related";
 @import "patterns/course-parts";
-
 @import "patterns/success-summary";
-
 @import "patterns/definition-list";
 
 // GOVU.UK Tabs without border around entire component
